--- a/pom.xml
+++ b/pom.xml
@@ -4,8 +4,8 @@
          xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
     <modelVersion>4.0.0</modelVersion>
 
-    <groupId>com.houari</groupId>
-    <artifactId>Calculator</artifactId>
+    <groupId>groupId</groupId>
+    <artifactId>LAB_3</artifactId>
     <version>1.0-SNAPSHOT</version>
 
     <properties>
@@ -16,12 +16,24 @@
     <dependencies>
         <dependency>
             <groupId>org.junit.jupiter</groupId>
-            <artifactId>junit-jupiter-api</artifactId>
+            <artifactId>junit-jupiter</artifactId>
             <version>RELEASE</version>
             <scope>test</scope>
         </dependency>
+        <dependency>
+            <groupId>org.mockito</groupId>
+            <artifactId>mockito-junit-jupiter</artifactId>
+            <version>3.5.15</version>
+            <scope>test</scope>
+        </dependency>
+        <dependency>
+            <groupId>org.mockito</groupId>
+            <artifactId>mockito-inline</artifactId>
+            <version>3.5.15</version>
+            <scope>test</scope>
+        </dependency>
     </dependencies>
-
+         
     <build>
         <plugins>
             <plugin>
@@ -34,4 +46,5 @@
             </plugin>
         </plugins>
     </build>
+
 </project>
