--- a/.github/workflows/maven.yml
+++ b/.github/workflows/maven.yml
@@ -16,18 +16,13 @@ jobs:
 
     steps:
     - uses: actions/checkout@v2
-    
+
     - name: Set up JDK 11
       uses: actions/setup-java@v2
       with:
         java-version: '11'
         distribution: 'temurin'
         cache: maven
-    
-    - name: Setup headless environment
-      run: |
-          export DISPLAY=:99
-          sudo apt-get install Xvfb
-          sudo Xvfb -ac :99 -screen 0 1280x1024x24 > /dev/null 2>&1 &
-          mycommand
-          mvn --batch-mode --update-snapshots verify
+
+    - name: Build with Maven
+      run: mvn --batch-mode --update-snapshots verify
